First attempt on building with Java 9.